GL/Projet_GL/src/test/deca/context/invalid/params/double_def_param.deca
// Description:
//    Declaration de parametres
//
// Resultats:
//    Parametre deja declare.
//    Erreur affichée: Parameter already declared: x
//

class A {
    int f(int x, int x) {
        return x;
    }
}
{
}


